data/derived/sp14/progs/unify/prog1148.ml.out
Characters 78-80:
  List.fold_left f base xs;;
                        ^^
Error: This expression has type int but an expression was expected of type
         int list
